--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.11",
   "description": "A NodeJS library for logging",
   "main": "dist/index.js",
+  "type": "module",
   "repository": "git@github.com:x71c9/i0n.git",
   "author": "x71c9 <108585118+x71c9@users.noreply.github.com>",
   "license": "UNLICENSED",
@@ -24,9 +25,7 @@
     "build": "yarn tsc -b"
   },
   "lint-staged": {
-    "src/**/*.{js,ts,json}": [
-      "yarn prettier --write"
-    ]
+    "src/**/*.{js,ts,json}": ["yarn prettier --write"]
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
@@ -47,5 +46,7 @@
     "tsc-watch": "^6.0.0",
     "typescript": "^4.9.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ora": "^7.0.1"
+  }
 }
