--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i0n",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A NodeJS library for logging",
   "main": "dist/index.js",
   "type": "module",
@@ -25,7 +25,9 @@
     "build": "yarn tsc -b"
   },
   "lint-staged": {
-    "src/**/*.{js,ts,json}": ["yarn prettier --write"]
+    "src/**/*.{js,ts,json}": [
+      "yarn prettier --write"
+    ]
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
