--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
@@ -49,6 +50,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dateformat": "^3",
     "ora-classic": "^5.4.2",
     "w3i": "^0.2.0"
   }
